[package]
name = "lsh_vec_index"
version = "0.1.0"
edition = "2021"
description = "A lightweight, in-memory vector index for approximate nearest neighbors using Locality-Sensitive Hashing"
license = "MIT OR Apache-2.0"
keywords = ["lsh", "ann", "vector-search", "nearest-neighbors", "embeddings"]
categories = ["algorithms", "data-structures", "science"]

[lib]
name = "lsh_vec_index"

[dependencies]
hashbrown = "0.15"
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"
parking_lot = "0.12"
thiserror = "2"

# Optional dependencies
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
bincode = { version = "1.3", optional = true }
pyo3 = { version = "0.23", optional = true }

[features]
default = []
parallel = ["dep:rayon"]
persistence = ["dep:serde", "dep:serde_json", "dep:bincode", "hashbrown/serde", "ndarray/serde-1"]
python = ["dep:pyo3", "pyo3/extension-module"]
full = ["parallel", "persistence"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_distr = "0.4"

[[bench]]
name = "lsh_bench"
harness = false

[[example]]
name = "basic_usage"

[[example]]
name = "benchmark_comparison"
